removed all references to LG.  Sorted out some alignment issues with the Nav bar content.

--- a/styles.css
+++ b/styles.css
@@ -25,14 +25,14 @@ body {
 
 nav {
     display: flex;
-    position: fixed;
+    position: sticky;
     top: 0;
     justify-content: space-around;
     align-items: center;
     background: var(--greyblue);
     width: 100%;
     margin: 0px;
-    padding: 0px;
+    padding: 10px;
     z-index: 1;
     opacity: 0.9;
     min-height: 8vh;
@@ -45,7 +45,8 @@ nav {
     padding: 5px;
     font-size: 20px;
     font-family: "EB Garamond";
-    min-width: 375px;
+    min-width: 200px;
+    margin-bottom: 0px;
 }
 
 .nav-links {
@@ -54,6 +55,7 @@ nav {
     justify-content: space-around;
     align-items: center;
     width: 60%;
+    margin-bottom: 0px;
 }
 
 .nav-links li {
